--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "0.19.0",
     "colors": "1.1.2",
     "cross-env": "1.0.7",
+    "copy-dir":"0.0.8",
     "eslint": "2.2.0",
     "eslint-loader": "1.3.0",
     "eslint-plugin-react": "4.0.0",
@@ -49,7 +50,8 @@
   "scripts": {
     "start": "parallelshell \"eslint webpack.config.js tools\" \"npm run test:watch\" \"npm run dist\"",
     "dist": "babel-node tools/distServer.js",
-    "prebuild": "npm run clean && babel-node tools/copyfiles.js",
+    "prebuild": "npm run clean && npm run copy",
+    "copy":"babel-node tools/copyfiles.js",
     "build": "npm run test && babel-node tools/build.js && npm run dist",
     "clean": "rimraf ./dist && mkdir dist",
     "test": "cross-env NODE_ENV=test mocha --reporter progress --compilers js:babel-core/register --recursive \"./src/**/*.spec.js\"",
