--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-router": "2.0.0",
-    "flux": "2.1.1"
+    "flux": "2.1.1",
+    "rctui":"0.5.1"
   },
   "devDependencies": {
     "babel-cli": "6.5.1",
